--- a/src/pages/Item.module.css
+++ b/src/pages/Item.module.css
@@ -7,19 +7,9 @@
   display: flex;
   align-items: flex-start;
 }
-.item__img {
-  position: relative;
+.item__gallery {
+  width: calc(100% - 400px);
   height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  background: rgba(91, 91, 91, 0.3);
-}
-.item__img img {
-  position: relative;
-  width: 100%;
-  object-fit: scale-down;
 }
 .item__info {
   width: 400px;
@@ -92,6 +82,10 @@
     flex-direction: column;
     position: relative;
     height: 100%;
+  }
+  .item__gallery {
+    width: 100%;
+    height: 50%;
   }
   .item__img {
     width: 100%;
