--- a/src/pages/Item.module.scss
+++ b/src/pages/Item.module.scss
@@ -8,50 +8,32 @@
   display: flex;
   align-items: flex-start;
 
-  &__img {
-    position: relative;
+  &__gallery{
+    width: calc(100% - 400px);
     height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    background: rgba(91,91,91, 0.3);
-
-    & img {
-      position: relative;
-      width: 100%;
-      object-fit: scale-down;
-    }
   }
+
+  //&__img {
+  //  position: relative;
+  //  height: 100%;
+  //  width: 100%;
+  //  display: flex;
+  //  justify-content: center;
+  //  overflow: hidden;
+  //  background: rgba(91,91,91, 0.3);
+  //
+  //  & img {
+  //    position: relative;
+  //    width: 100%;
+  //    object-fit: scale-down;
+  //  }
+  //}
 
   &__info {
     width: 400px;
     margin-top: 150px;
   }
-
-  //&__back{
-  //  display: flex;
-  //  justify-content: center;
-  //  align-items: center;
-  //  margin: 10px 0;
-  //
-  //  & a{
-  //    color: white;
-  //    background: rgba(19, 26, 25, 0.5);
-  //    padding: 15px;
-  //    border-radius: 20px;
-  //
-  //    &:hover{
-  //      background: rgba(19, 26, 25, 0.8);
-  //    }
-  //  }
-  //  & a{
-  //    font-size: 24px;
-  //    text-decoration: none;
-  //  }
-  //}
 }
-
 .tools {
   position: absolute;
   height: 100%;
@@ -127,6 +109,11 @@
     flex-direction: column;
     position: relative;
     height: 100%;
+
+    &__gallery{
+      width: 100%;
+      height: 50%;
+    }
 
     &__img{
       width: 100%;
