--- a/src/components/UI/AddBtn.module.css
+++ b/src/components/UI/AddBtn.module.css
@@ -1,12 +1,13 @@
 .btn {
   width: 100%;
   height: 100%;
-  background: rgba(200, 38, 71, 0.8);
-  color: white;
+  background: #242526;
+  color: rgb(228, 230, 235);
   font-size: 24px;
+  cursor: pointer;
 }
 .btn:hover {
-  background: rgb(200, 38, 71);
+  background: #393a3b;
 }
 
 /*# sourceMappingURL=AddBtn.module.css.map */
