--- a/src/components/UI/AmountController.module.css
+++ b/src/components/UI/AmountController.module.css
@@ -19,13 +19,17 @@
 .divInput__button {
   height: 100%;
   width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.divInput__button svg {
+  height: 80%;
+  width: 80%;
 }
 
 @media screen and (max-width: 600px) {
   .divInput {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 30px;
   }
   .divInput input::-webkit-outer-spin-button,
@@ -34,14 +38,11 @@
     margin: 0;
   }
   .divInput input[type=number] {
-    -moz-appearance: textfield;
-    text-align: center;
     height: 100%;
     font-size: 24px;
     width: 50px;
   }
   .divInput__button {
-    height: 100%;
     width: 30px;
   }
 }
