--- a/src/components/UI/AmountController.module.scss
+++ b/src/components/UI/AmountController.module.scss
@@ -21,14 +21,19 @@
   &__button {
     height: 100%;
     width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & svg{
+      height: 80%;
+      width: 80%;
+    }
   }
 }
 
 @media screen and (max-width: 600px) {
   .divInput {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 30px;
 
     & input::-webkit-outer-spin-button,
@@ -38,15 +43,12 @@
     }
 
     & input[type=number] {
-      -moz-appearance: textfield;
-      text-align: center;
       height: 100%;
       font-size: 24px;
       width: 50px;
     }
 
     &__button {
-      height: 100%;
       width: 30px;
     }
   }
