--- a/src/pages/Products.module.scss
+++ b/src/pages/Products.module.scss
@@ -1,11 +1,11 @@
 
 .container{
   width: 100%;
-  margin: 0 10px;
 }
 
 .productList{
-  margin-top: 5vh;
+  width: 1040px;
+  margin: 10px auto;
   list-style: none;
   display: flex;
   justify-content: flex-start;
