--- a/src/pages/Root.module.css
+++ b/src/pages/Root.module.css
@@ -18,12 +18,11 @@
 }
 
 .header {
-  height: 10vh;
+  height: 100px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: black;
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -41,17 +40,12 @@
   height: 100%;
   object-fit: scale-down;
 }
-.header__link {
-  padding: 5px;
-  text-decoration: none;
-  color: white;
-}
 
 .cart {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid black;
+  border: 1px solid black;
   min-width: 100px;
   height: 50px;
   position: absolute;
