--- a/src/components/Order/Step.module.scss
+++ b/src/components/Order/Step.module.scss
@@ -7,7 +7,7 @@
   font-weight: bold;
   width: 25%;
   height: 80px;
-  opacity: 0.5;
+  opacity: 0.3;
   border-bottom: 3px solid black;
 
 
@@ -32,8 +32,8 @@
 }
 
 .active{
-  color: deeppink;
-  border-color: deeppink;
+  color: #242526;
+  border-color: #242526;
   opacity: 1;
 }
 
