--- a/src/components/UI/UseFormInput.module.scss
+++ b/src/components/UI/UseFormInput.module.scss
@@ -72,7 +72,6 @@
   position: absolute;
   top: 24px;
   left: 16px;
-  /*font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;*/
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   font-size: 12px;
   font-weight: 600;
@@ -89,11 +88,14 @@
   opacity: 1;
 }
 
+.field input:focus + .lab {
+  display: none;
+}
+
 .field.error {
   background-color: #ffffff;
-  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.2);
   animation: vibrate 0.5s ease-in-out;
-  /*border: 1px solid #ec392f;*/
 }
 
 .field.error input {
