--- a/src/pages/Products.module.scss
+++ b/src/pages/Products.module.scss
@@ -13,13 +13,13 @@
   padding: 0;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1040px) {
   .container{
     width: 100%;
     margin: 0;
   }
   .productList{
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 }
