--- a/src/components/UI/UseFormInput.module.css
+++ b/src/components/UI/UseFormInput.module.css
@@ -18,7 +18,7 @@
 }
 
 .field.active input {
-  padding: 24px 16px 8px 16px;
+  padding: 0 0 0 20px;
 }
 
 .field.active input + label {
@@ -35,7 +35,6 @@
   width: 100%;
   height: 48px;
   position: relative;
-  padding: 0 16px;
   border: none;
   border-radius: 4px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
