--- a/src/pages/Products.module.css
+++ b/src/pages/Products.module.css
@@ -1,6 +1,24 @@
 .container {
   width: 100%;
 }
+.container__search {
+  width: 300px;
+  height: 30px;
+  margin: 10px auto;
+  display: flex;
+}
+.container__search input {
+  width: 100%;
+  height: 100%;
+}
+.container__search label {
+  height: 30px;
+  position: relative;
+  transform: translateX(10px);
+}
+.container__search label svg {
+  height: 100%;
+}
 
 .productList {
   width: 1040px;
