--- a/src/pages/Products.module.scss
+++ b/src/pages/Products.module.scss
@@ -1,8 +1,28 @@
 
 .container{
   width: 100%;
-}
 
+  &__search{
+    width: 300px;
+    height: 30px;
+    margin: 10px auto;
+    display: flex;
+
+    & input{
+      width: 100%;
+      height: 100%;
+    }
+    & label{
+      height: 30px;
+      position: relative;
+      transform: translateX(10px);
+
+      & svg{
+        height: 100%;
+      }
+    }
+  }
+}
 .productList{
   width: 1040px;
   margin: 10px auto;
